landing layout ready, needing content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,8 +26,8 @@
             <nav>
                 <a href="/#presentation">Présentation</a>
                 <a href="/#dates">Dates</a>
-                <a href="/#blog">Blog</a>
-                <a href="/#contact">Contact</a>
+                <!--a href="/#blog">Blog</a-->
+                <a href="/#team">Organisateurs</a>
             </nav>
                 <!--End Navigation Menu -->
         </header>
