--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -10,7 +10,7 @@
     {{page.content}}
 
     <!-- Blog Section -->
-        <section id="blog " class="wow fadeIn ptb ptb-sm-80 ">
+        <section id="blog " class="landing-blog wow fadeIn ptb ptb-sm-80 ">
             <div class="container ">
                 <h2 class="float-left float-none-xs ">Blog</h2>
                 <a class="btn-link-a float-right float-none-xs " href="/blog">Voir Tout</a>
