--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,7 @@ $darkBlue: #171927;
 $darkerBlue: #101220;
 
 $darkFont: #202126;
+$mediumFont: #484a54;
 $lightFont: #fcfcfa;
 
 $borderColor: #dbdbdb;
@@ -127,5 +128,6 @@ $MeneStone: 'MeneStone', Courier, monospace;
         "custom-header",
         "cover",
         "presentation",
-        "content"
+        "content",
+        "footer"
 ;
