--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -13,10 +13,15 @@
         right: 0px;
         left: 0px;
     }
+
+    &.small {
+        height: 100px;
+    }
 }
 
 .content {
     display: block;
+    position: relative;
     width: 100%;
 
     .container {
@@ -25,10 +30,16 @@
         width: 90%;
         max-width: 800px;
         margin: 0px auto;
+        top: 0;
+        bottom: 0;
         padding: 30px 0px 30px;
         z-index: 90;
         border-left: solid 1px $borderColor;
         border-right: solid 1px $borderColor;
+
+        &.space-after {
+            padding: 30px 0px 60px;
+        }
 
         &::before, &::after {
             content: "";
@@ -177,6 +188,70 @@ pre {
 
         &::after, &::before {
             background-color: $blue;
+        }
+    }
+}
+
+.landing-blog {
+    display: none !important;
+}
+
+.team-container {
+    display: block;
+    position: relative;
+    width: 40%;
+
+    &:nth-child(3) {
+        float: left;
+    }
+    &:nth-child(4) {
+        float: right;
+    }
+
+    .avatar {
+        display: block;
+        width: 100%;
+        float: left;
+        margin: 40px 0px 10px;
+
+        img {
+            display: block;
+            float: left;
+            width: 100px;
+        }
+    }
+
+    .name, .mail, .twitter {
+        display: block;
+        position: relative;
+        float: left;
+        width: 100%;
+        height: 34px;
+        font-family: $SexyComme;
+        font-size: 27px;
+        color: $darkFont;
+    }
+
+    .name {
+        margin: 25px 0px 20px;
+    }
+
+    a {
+        display: block;
+        width: 100%;
+        position: relative;
+        height: 30px;
+        font-family: $MeneStone;
+        color: $mediumFont;
+        font-size: 18px;
+        text-decoration: none;
+
+        &:hover {
+            color: $lightBlue;
+        }
+
+        &:active {
+            color: $blue;
         }
     }
 }
