title, meetup link, some content

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
                     <a href="/#team">Organisateurs</a>
                 </div>
                 <div class="column">
-                    <a href="#">Page Meetup</a>
+                    <a href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">Page Meetup</a>
                     <a href="/download/ident-pack.zip">Logo & Identité</a>
                 </div>
                 <div class="clearfix"></div>
