--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
  <meta charset="utf-8" />
  <title>{{page.title}}</title>
- <meta name="description" content="Formation Domain-Driven Design Paris France" />
- <meta name="keywords" content="formation training domain driven design DDD France Paris Français" />
- <meta name="author" content="Jérémie Grodziski">
+ <meta name="description" content="Paris Clojure Meetup" />
+ <meta name="keywords" content="Clojure meetup java user group France Paris Français" />
+ <meta name="author" content="Jérémie Grodziski, Hiram Madeleine">
  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
  <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
  <!-- Favicon Icon -->
