blog section now restyled - few things yet to improve like search and tags

--- a/_includes/intro-blog.html
+++ b/_includes/intro-blog.html
@@ -1,12 +1,10 @@
 <!-- Intro Section -->
 
-        <section class="inner-intro bg-img-building overlay-light parallax">
+        <section class="intro-blog-cover">
             <div class="container">
-                <div class="row title">
-                    <h1 class="h2">Domain-Driven-Design.eu <br/>BLOG</h1>
-                    <div class="page-breadcrumb">
-                        <a href="/">Accueil</a>/<span>Blog</span>
-                    </div>
+                <img src="/img/blog-cover.svg"/>
+                <div class="page-breadcrumb">
+                    <a href="/">Accueil</a> | <span>Blog</span>
                 </div>
             </div>
         </section>
