--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
   <body>
 
-    {% include header.html %}
+    {% include header-blog.html %}
 
     <div class="page-content">
       <div class="wrapper">
