--- a/_layouts/blog-single.html
+++ b/_layouts/blog-single.html
@@ -110,6 +110,8 @@
     </section>
     <!-- End Blog Post Section -->
     {% include footer.html %}
+
+    {% include js.html %}
 </body>
 
 </html>
