--- a/_includes/js.html
+++ b/_includes/js.html
@@ -36,6 +36,19 @@
     <script src="{{site.baseurl}}/js/smooth-scroll.js " type="text/javascript "></script>
     <script src="{{site.baseurl}}/js/parallax.min.js " type="text/javascript "></script>
     <script src="{{site.baseurl}}/js/rellax.min.js " type="text/javascript "></script>
+    <script src="{{site.baseurl}}/js/jekyll-search.js " type="text/javascript "></script>
+
+    <script type="text/javascript">
+      SimpleJekyllSearch({
+        searchInput: document.getElementById('search-input'),
+        resultsContainer: document.getElementById('results-container'),
+        json: '{{ site.baseurl }}/search.json',
+        noResultsText: 'Aucun résultat',
+        limit: 10,
+        //fuzzy: false,
+        exclude: ['Welcome']
+      })
+    </script>
 
     <script>
     var scene = document.getElementById('parallax-scene');
