--- a/css/main.scss
+++ b/css/main.scss
@@ -132,5 +132,6 @@ $textFont: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu
         "content",
         "footer",
         "landing-blog",
-        "blog"
+        "blog",
+        "search"
 ;
