--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -222,7 +222,7 @@
     color: $mediumFont !important;
     font-size: 18px;
 
-    h1 {
+    h2 {
         display: block;
         position: relative;
         width: 100%;
@@ -234,17 +234,19 @@
         color: $darkFont;
         text-indent: -2px;
 
-        &::before, &::after {
-            content: "";
-            display: block;
-            position: absolute;
-            height: 1px;
-            width: 80000px;
-            left: -5000px;
-            background-color: $borderColor;
-            z-index: -10;
-            opacity: 0.5;
-        }
+
+        //&::before, &::after {
+        //    content: "";
+        //    display: block;
+        //    position: absolute;
+        //    height: 1px;
+        //    width: 80000px;
+        //    left: -5000px;
+        //    background-color: $borderColor;
+        //    z-index: -10;
+        //    opacity: 0.5;
+        //}
+
 
         &::before {
             top: 2px;
