add hightlight js syntax highlighter with clojure language and darkula theme

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,3 +12,6 @@
  <!--link href="{{site.baseurl}}/css/plugin/animate.css" rel="stylesheet" type="text/css" /-->
  <!--link href="{{site.baseurl}}/css/custom.css" rel="stylesheet" type="text/css" /-->
  <link href="{{site.baseurl}}/css/main.css" rel="stylesheet" type="text/css" />
+ <script src="{{site.baseurl}}/js/highlight.pack.js " type="text/javascript "></script>
+<script>hljs.initHighlightingOnLoad();</script>
+
