--- a/_includes/js.html
+++ b/_includes/js.html
@@ -37,7 +37,7 @@
     <script src="{{site.baseurl}}/js/parallax.min.js " type="text/javascript "></script>
     <script src="{{site.baseurl}}/js/rellax.min.js " type="text/javascript "></script>
     <script src="{{site.baseurl}}/js/jekyll-search.js " type="text/javascript "></script>
-
+    <script src="{{site.baseurl}}/js/highlight.pack.js " type="text/javascript "></script>
     <script type="text/javascript">
       SimpleJekyllSearch({
         searchInput: document.getElementById('search-input'),
