change code font size and line height

--- a/_includes/head-blog.html
+++ b/_includes/head-blog.html
@@ -1,1 +1,7 @@
  <link href="{{site.baseurl}}/css/darkula.css" rel="stylesheet" type="text/css" />
+ <style>
+ pre code {
+ 	font-size:16px;
+ 	line-height:20px;
+ }
+ </style>
