--- a/_includes/js.html
+++ b/_includes/js.html
@@ -37,7 +37,6 @@
     <script src="{{site.baseurl}}/js/parallax.min.js " type="text/javascript "></script>
     <script src="{{site.baseurl}}/js/rellax.min.js " type="text/javascript "></script>
     <script src="{{site.baseurl}}/js/jekyll-search.js " type="text/javascript "></script>
-    <script src="{{site.baseurl}}/js/highlight.pack.js " type="text/javascript "></script>
     <script type="text/javascript">
       SimpleJekyllSearch({
         searchInput: document.getElementById('search-input'),
@@ -58,3 +57,13 @@
     <script>
         var rellax = new Rellax('.rellax');
     </script>
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-80836640-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
