change header to let the text beside the logo permanent and horizontal and WITH A GREATER FONT!

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,10 @@
         <!-- HEADER -->
         <header class="shiny-header">
             <div class="logo">
-                <a href="/"><img class="illu" src="/img/logos/paris-clojure.svg"/><img class="typo" src="/img/logos/paris-clojure-type.svg"/></a>
+                <a href="/">
+                <img class="illu" src="/img/logos/paris-clojure.svg"/>
+                <img class="typo" src="/img/logos/texte-paris-clojure-meetup.svg"/>
+                </a>
             </div>
             <nav>
                 <a href="/#presentation">Présentation</a>
