fix blog's header

--- a/_includes/header-blog.html
+++ b/_includes/header-blog.html
@@ -1,26 +1,14 @@
- <!-- Preloader -->
-    <!--<section id="preloader">
-        <div class="loader" id="loader">
-            <div class="loader-img"></div>
-        </div>
-    </section>-->
-    <!-- End Preloader -->
-    <!-- Search menu Top -->
-    <!--section class=" top-search-bar cbp-spmenu cbp-spmenu-horizontal cbp-spmenu-top">
-
-    </section-->
-    <!--End Search menu Top -->
-    <!-- Site Wraper -->
-
-        <!-- HEADER -->
         <header class="shiny-header">
             <div class="logo">
-                <a href="/"><img class="illu" src="/img/logos/paris-clojure.svg"/><img class="typo" src="/img/logos/paris-clojure-type.svg"/></a>
+                <a href="/">
+                <img class="illu" src="/img/logos/paris-clojure.svg"/>
+                <img class="typo" src="/img/logos/texte-paris-clojure-meetup.svg"/>
+                </a>
             </div>
-            <div id="search-container" class="search-wraper">
-                <input id="search-input" type="text" placeholder="Search..." name="search" />
-                <ul id="results-container"></ul>
-            </div>
-                <!--End Navigation Menu -->
+            <nav>
+                <a href="/#presentation">Présentation</a>
+                <a href="/#dates">Dates</a>
+                <a href="/#team">Organisateurs</a>
+                <a href="/blog">Blog</a>
+            </nav>
         </header>
-        <!-- END HEADER -->
