refactoring a little bit the design of the blog

--- a/_layouts/blog-single.html
+++ b/_layouts/blog-single.html
@@ -24,7 +24,7 @@
     <!-- Blog Post Section -->
     <section class="content">
         <div class="line-wrapper">
-            <div class="container">
+            <div class="blog-container">
                 <div class="row">
                     <!-- Post Bar -->
                     <div class="col-lg-9 col-md-9 blog-post-hr">
