--- a/css/main.scss
+++ b/css/main.scss
@@ -24,6 +24,9 @@
     font-style: normal;
 }
 
+@import 'https://fonts.googleapis.com/css?family=Gentium+Book+Basic';
+
+
 @charset "utf-8";
 
 
@@ -76,7 +79,8 @@ $SexyComme: 'SexyComme', Helvetica, Arial, sans-serif;
 $MeneStone: 'MeneStone', Courier, monospace;
 $textFont: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Open Sans","Helvetica Neue",sans-serif;
 
-
+// Blog font serif
+$Gentium: 'Gentium Book Basic', serif;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
