minor tweaks of the blog style, enhancement to the blog posts

--- a/_layouts/blog-single.html
+++ b/_layouts/blog-single.html
@@ -49,7 +49,7 @@
                                 <img alt="author" src="{{site.baseurl}}/img/JeremieGrodziski-portrait.png">
                             </div-->
 
-                            <h6>{{ page.author }}</h6>
+                            <h6><a href="{{ page.author-url }}">{{ page.author }}</a></h6>
                             <!--div class="social">
                                 <a href="https://www.twitter.com/jgrodziski" target="_blank"><i class="fa fa-twitter"></i></a>
                                 <a href="https://github.com/jgrodziski" target="_blank"><i class="fa fa-github"></i></a>
