--- a/css/main.scss
+++ b/css/main.scss
@@ -24,8 +24,29 @@
     font-style: normal;
 }
 
-@import 'https://fonts.googleapis.com/css?family=Gentium+Book+Basic';
+@font-face {
+    font-family: 'GentiumBold';
+    src:
+         url('../fonts/GenBkBasB.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
 
+@font-face {
+    font-family: 'Gentium';
+    src:
+         url('../fonts/GenBkBasR.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'GentiumItalic';
+    src:
+         url('../fonts/GenBkBasI.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+}
 
 @charset "utf-8";
 
@@ -60,6 +81,8 @@ $green: #45ad97;
 $lightGreen: #63ddce;
 $blue: #4b6dd7;
 $lightBlue: #63afef;
+$lightBlueRGBA0: rgba(99, 175, 239, 0);
+$lightBlueRGBA06: rgba(99, 175, 239, .6);
 $purple: #7152b9;
 $lightPurple: #a6a9ff;
 $white: #ffffff;
@@ -80,7 +103,7 @@ $MeneStone: 'MeneStone', Courier, monospace;
 $textFont: -apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Open Sans","Helvetica Neue",sans-serif;
 
 // Blog font serif
-$Gentium: 'Gentium Book Basic', serif;
+$Gentium: 'Gentium', serif;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
