--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,6 +13,7 @@
                 <div class="column">
                     <a href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">Page Meetup</a>
                     <a href="/download/ident-pack.zip">Logo & Identité</a>
+                    <a href="/blog">Blog</a>
                 </div>
                 <div class="clearfix"></div>
             </div>
