layout and text fixes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,10 +5,10 @@
                     <img src="/img/footer-logo.svg"/>
                 </div>
                 <div class="column">
-                    <a href="/#presentation">Présentation</a>
+                    <a href="/#presentation">Presentation</a>
                     <a href="/#dates">Dates</a>
-                    <!--a href="/#blog">Blog</a-->
-                    <a href="/#team">Organisateurs</a>
+                    <a href="/blog">Blog</a>
+                    <a href="/#team">Organizers</a>
                 </div>
                 <div class="column">
                     <a href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">Page Meetup</a>
