--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,13 @@
         <header class="shiny-header">
             <div class="logo">
                 <a href="/">
-                <img class="illu" src="/img/logos/paris-clojure.svg"/>
-                <img class="typo" src="/img/logos/texte-paris-clojure-meetup.svg"/>
+                    <img class="illu" src="/img/logos/logo-paris-clojure.svg"/>
                 </a>
             </div>
             <nav>
-                <a href="/#presentation">Présentation</a>
+                <a href="/#presentation">Presentation</a>
                 <a href="/#dates">Dates</a>
-                <a href="/#team">Organisateurs</a>
-                <a href="/#blog">Blog</a>
+                <a href="/#team">Organizers</a>
+                <a href="/blog">Blog</a>
             </nav>
         </header>
