--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -34,7 +34,7 @@
                         <div class="clearfix "></div>
                     </div>
 
-                    <a class="landing-blog-link" href="/blog">voir tout</a>
+                    <a class="landing-blog-link" href="/blog">see all</a>
                     <div class="big-text-space"></div>
                     <div class="clearfix "></div>
 
