--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -35,13 +35,13 @@
             a {
                 display: block;
                 width: 100%;
-                font-family: $MeneStone;
+                font-family: $SexyComme;
                 color: $lightFont;
                 text-align: right;
                 height: 40px;
                 line-height: 40px;
                 text-decoration: none;
-                font-size: 15px;
+                font-size: 18px;
 
                 &:hover {
                     color: $lightBlue;
