--- a/css/main.scss
+++ b/css/main.scss
@@ -54,6 +54,7 @@
 
 // Our variables
 $base-font-family: "SexyComme", Helvetica, Arial, sans-serif;
+$base-text-font: 'Gentium', times, serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
