--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -100,7 +100,7 @@ pre {
     display: block;
     width: 90%;
     max-width: 800px;
-    padding: 40px 30px 20px;
+    padding: 20px 30px 0px;
     background-color: $darkBlue;
     color: $white;
     margin: 0px auto;
@@ -233,13 +233,13 @@ pre {
         float: left;
         width: 100%;
         height: 34px;
-        font-family: $SexyComme;
         font-size: 27px;
-        color: $darkFont;
     }
 
     .name {
         margin: 25px 0px 20px;
+        font-family: $SexyComme;
+        color: $darkFont;
     }
 
     a {
@@ -247,7 +247,7 @@ pre {
         width: 100%;
         position: relative;
         height: 30px;
-        font-family: $MeneStone;
+        font-family: $base-text-font;
         color: $mediumFont;
         font-size: 18px;
         text-decoration: none;
