--- a/_sass/_landing-blog.scss
+++ b/_sass/_landing-blog.scss
@@ -89,18 +89,30 @@
     .post-meta {
         display: block;
         width: 100%;
-        font-family: $textFont;
+        font-family: $base-text-font;
         color: $mediumFont;
         margin: 20px 0px;
-        font-size: 16px;
-        line-height: 20px;
+        font-size: 18px;
+        line-height: 22px;
+
+        a {
+            color: $darkFont;
+
+            &:hover {
+                color: $lightBlue;
+            }
+
+            &:active {
+                color: $blue;
+            }
+        }
     }
 
     .post-date {
         display: block;
         width: 100%;
         margin: 30px 0px 0px;
-        font-family: $MeneStone;
-        font-size: 16px;
+        font-family: $SexyComme;
+        font-size: 18px;
     }
 }
