--- a/_sass/_presentation.scss
+++ b/_sass/_presentation.scss
@@ -42,7 +42,7 @@
             width: 90%;
             max-width: 800px;
             margin: 0px auto;
-            padding: 90px 0px 120px;
+            padding: 90px 0px 80px;
             z-index: 90;
             border-left: solid 1px $borderColor;
             border-right: solid 1px $borderColor;
@@ -57,7 +57,7 @@
             //    border-left: solid 1px $borderColor;
             //    border-right: solid 1px $borderColor;
             //    z-index: -10;
-            //    opacity: 0.3;
+            //    opacity: 0.2;
             //}
 
             &::before {
@@ -77,9 +77,9 @@
             //height: 51px;
             //line-height: 73px;
             font-family: $SexyComme;
-            font-size: 74px;
+            font-size: 54px;
             color: $darkFont;
-            text-indent: -6px;
+            text-indent: -1px;
 
             &::before, &::after {
                 content: "";
@@ -93,11 +93,11 @@
             }
 
             &::before {
-                top: 7px;
+                top: 4px;
             }
 
             &::after {
-                bottom: 29px;
+                bottom: 22px;
             }
         }
 
@@ -105,13 +105,14 @@
             display: block;
             position: relative;
             width: 100%;
-            line-height: 24px;
+            line-height: 32px;
             margin: 0px auto;
-            font-family: $MeneStone;
-            font-size: 18px;
+            font-family: $base-text-font;
+            color: $mediumFont;
+            font-size: 23px;
 
             &::before, &::after {
-                content: "";
+                //content: "";
                 display: block;
                 position: absolute;
                 height: 1px;
@@ -127,6 +128,68 @@
 
             &::after {
                 bottom: 8px;
+            }
+        }
+
+        .presentation-links {
+            display: block;
+            width: 100%;
+
+            a {
+                display: block;
+                position: relative;
+                margin-right: 15px;
+                height: 24px;
+                line-height: 22px;
+                font-family: $SexyComme;
+                font-size: 24px;
+                text-decoration: none;
+                color: $darkFont;
+
+                &:first-child {
+                    float: left;
+                }
+
+                &:last-child {
+                    float: right;
+                }
+
+                &::after, &::before {
+                    content: "";
+                    display: block;
+                    position: absolute;
+                    width: 12px;
+                    height: 3px;
+                    @include border-radius(10px);
+                    background-color: $darkFont;
+                    right: -16px;
+                }
+
+                &::after {
+                    transform: rotate(-45deg);
+                    top: 11px;
+                }
+
+                &::before {
+                    transform: rotate(45deg);
+                    top: 4px;
+                }
+
+                &:hover {
+                    color: $lightBlue;
+
+                    &::after, &::before {
+                        background-color: $lightBlue;
+                    }
+                }
+
+                &:active {
+                    color: $blue;
+
+                    &::after, &::before {
+                        background-color: $blue;
+                    }
+                }
             }
         }
 }
