--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,15 +5,14 @@
                     <img src="/img/footer-logo.svg"/>
                 </div>
                 <div class="column">
-                    <a href="/#presentation">Presentation</a>
-                    <a href="/#dates">Dates</a>
-                    <a href="/blog">Blog</a>
+                    <a href="/#presentation">Presentation</a><br/>
+                    <a href="/#dates">Dates</a><br/>
                     <a href="/#team">Organizers</a>
                 </div>
                 <div class="column">
-                    <a href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">Page Meetup</a>
-                    <a href="/download/ident-pack.zip">Logo & Identité</a>
-                    <a href="/blog">Blog</a>
+                    <a href="/blog">Blog</a><br/>
+                    <a href="http://www.meetup.com/fr-FR/Paris-Clojure-User-Group/">Meetup Page</a><br/>
+                    <a href="/download/ident-pack.zip">Logo & Branding</a>
                 </div>
                 <div class="clearfix"></div>
             </div>
